--- a/FashionMNIST_tf.ipynb
+++ b/FashionMNIST_tf.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNp3Rv58b9I8o5uPj9fHYge",
+      "authorship_tag": "ABX9TyO8Sb/JZvcR+TDEXoh+dklV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Zv82R3QWPJm5",
-        "outputId": "3668daf9-2989-451f-cb4b-f0e6822bb0dd"
+        "outputId": "a118b285-8d1c-4ae5-a937-9c8a003f2b0e"
       },
       "outputs": [
         {
@@ -69,9 +69,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vz47P3F2Ppk_",
-        "outputId": "85baf01d-290b-4263-a724-6bf6134116f9"
+        "outputId": "e708d448-7f97-4535-e0d7-20c615d083fc"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,6 +86,144 @@
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
             "4422102/4422102 [==============================] - 0s 0us/step\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_images.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hP0RIDwzQAaS",
+        "outputId": "8990a756-b5fa-47fb-c1e3-2861787596df"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(60000, 28, 28)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_images.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xVh5Z-IUQP75",
+        "outputId": "96eef57e-9652-444e-df7d-a91e4b5f3595"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('uint8')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Las 5000 primeras muestras son el conjunto de validación.\n",
+        "valid_images, train_images = train_images[:5000]/255.0, train_images[5000:]/255.0\n",
+        "valid_labels, train_labels = train_labels[:5000], train_labels[5000:]"
+      ],
+      "metadata": {
+        "id": "qSA5xNKNjyq8"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Lista de nombres de las clases\n",
+        "class_names = ['T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat',\n",
+        "               'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle boot']"
+      ],
+      "metadata": {
+        "id": "qtWXy9uIku_E"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class_names[train_labels[0]]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "xzNp44wIl9ok",
+        "outputId": "55253e51-5eca-4ebf-8508-36107f9e90e7"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Pullover'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class_names[train_labels[1]]"
+      ],
+      "metadata": {
+        "id": "1TrgwQPnmJ60",
+        "outputId": "cff4d96e-fcac-4ebd-8606-a09484878cd9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Ankle boot'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 11
         }
       ]
     }
