--- a/Red_profunda_Sal_auxiliar.ipynb
+++ b/Red_profunda_Sal_auxiliar.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNwB++q71P/1Q8cfytGTi/i",
+      "authorship_tag": "ABX9TyOuA29owJjeVEbrgB5Zxwfc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -302,11 +302,11 @@
         "y_pred_aux"
       ],
       "metadata": {
-        "id": "dyGrHIzXZMWL",
-        "outputId": "57577c5b-2eae-491b-c673-7e01af8c509b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dyGrHIzXZMWL",
+        "outputId": "57577c5b-2eae-491b-c673-7e01af8c509b"
       },
       "execution_count": 16,
       "outputs": [
@@ -321,6 +321,31 @@
           },
           "metadata": {},
           "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.save(\"mi_modelo_Keras_red_profunda.h5\")\n",
+        "model.save('modelo_Keras_red_profunda')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T0FkKrNiePT4",
+        "outputId": "1af489d8-408d-417e-bae8-233dd4241040"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/keras/src/engine/training.py:3103: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+            "  saving_api.save_model(\n"
+          ]
         }
       ]
     }
